fix issus #5:  text font size is too small and hard to read

--- a/src/_component/about/about-mobile.scss
+++ b/src/_component/about/about-mobile.scss
@@ -32,7 +32,7 @@
 }
 
 .#{$class}-paragraph {
-  font-size: 1rem;
+  font-size: 1.5rem;
   line-height: 1.5;
   text-align: justify;
   text-indent: 2rem;
